# basis_test_robot

./: .clang-format  .gitattributes  CMakeLists.txt  README.md
docker/: Dockerfile  build-env.sh  build-freenove.sh  build-orin.sh  build-pi.sh  build_onnx_runtime.sh  install_docker_pi.sh  model.onnx  model_fp16.onnx  orin.Dockerfile  pi.Dockerfile  run-env.sh
docker/onnxruntime/: onnxruntime-linux-aarch64-gpu-1.18.2.tgz
launch/: camera_pipeline.launch.yaml  foxglove.launch.yaml  freenove_4wd.yaml
lib/image_conversion/: CMakeLists.txt
lib/image_conversion/include/: image_conversion.h
lib/image_conversion/src/: image_conversion.cpp
models/detr-resnet-50/orin_1280_800/: TensorrtExecutionProvider_TRTKernel_graph_torch_jit_3807232371223703087_0_0_sm87.engine  TensorrtExecutionProvider_TRTKernel_graph_torch_jit_3807232371223703087_0_0_sm87.profile  model_ctx.onnx
models/yolov8n/: model.onnx
models/yolov8n/orin_640_640/: model_ctx.onnx
models/yolov8n/orin_640_640/cache/: TensorrtExecutionProvider_TRTKernel_graph_main_graph_15308133557104678314_0_0_sm87.engine
proto/: CMakeLists.txt  basis_robot_input.proto  basis_robot_state.proto
unit/joystick_driver/: CMakeLists.txt  joystick_driver.unit.yaml
unit/joystick_driver/include/: joystick_driver.h
unit/joystick_driver/src/: joystick_driver.cpp
unit/joystick_driver/template/: joystick_driver.example.cpp  joystick_driver.example.h
unit/perception_demo/: CMakeLists.txt  perception_demo.unit.yaml
unit/perception_demo/include/: perception_demo.h
unit/perception_demo/lib/inference/: CMakeLists.txt
unit/perception_demo/lib/inference/include/: coco_labels.h
unit/perception_demo/lib/inference/src/: inference.cpp
unit/perception_demo/lib/prepare_image/: CMakeLists.txt
unit/perception_demo/lib/prepare_image/include/: prepare_image.h
unit/perception_demo/src/: perception_demo.cpp
unit/perception_demo/template/: perception_demo.example.cpp  perception_demo.example.h  resnet_demo.example.h
unit/resnet_demo/: CMakeLists.txt  resnet_demo.unit.yaml
unit/resnet_demo/include/: prepare_image.h  resnet_demo.h
unit/resnet_demo/lib/: CMakeLists.txt
unit/resnet_demo/lib/inference/include/: inference.h
unit/resnet_demo/lib/inference/src/: inference.cpp
unit/resnet_demo/lib/prepare_image/src/: prepare_image.cu
unit/resnet_demo/src/: prepare_image.cu  resnet_demo.cpp
unit/resnet_demo/template/: resnet_demo.example.cpp  resnet_demo.example.h
unit/rpi_freenove_mecanum_driver/: CMakeLists.txt  rpi_freenove_mecanum_driver.unit.yaml
unit/rpi_freenove_mecanum_driver/include/: rpi_freenove_mecanum_driver.h
unit/rpi_freenove_mecanum_driver/src/: rpi_freenove_mecanum_driver.cpp
unit/rpi_freenove_mecanum_driver/template/: rpi_freenove_mecanum_driver.example.cpp  rpi_freenove_mecanum_driver.example.h
unit/rpi_freenove_servo_driver/: CMakeLists.txt  rpi_freenove_servo_driver.unit.yaml
unit/rpi_freenove_servo_driver/include/: rpi_freenove_servo_driver.h
unit/rpi_freenove_servo_driver/src/: rpi_freenove_servo_driver.cpp
unit/rpi_freenove_servo_driver/template/: rpi_PCA9685_driver.example.h  rpi_freenove_servo_driver.example.cpp  rpi_freenove_servo_driver.example.h
unit/rpi_libcamera_driver/: CMakeLists.txt  rpi_libcamera_driver.unit.yaml
unit/rpi_libcamera_driver/include/: rpi_libcamera_driver.h
unit/rpi_libcamera_driver/src/: rpi_libcamera_driver.cpp
unit/rpi_libcamera_driver/template/: rpi_libcamera_driver.example.cpp  rpi_libcamera_driver.example.h
unit/rplidar_driver/: CMakeLists.txt  rplidar_driver.unit.yaml
unit/rplidar_driver/include/: rplidar_driver.h
unit/rplidar_driver/src/: rplidar_driver.cpp
unit/rplidar_driver/template/: rplidar_driver.example.cpp  rplidar_driver.example.h
unit/static_transform_publisher/: CMakeLists.txt  static_transform_publisher.unit.yaml
unit/static_transform_publisher/include/: static_transform_publisher.h
unit/static_transform_publisher/src/: static_transform_publisher.cpp
unit/static_transform_publisher/template/: static_transform_publisher.example.cpp  static_transform_publisher.example.h
unit/v4l2_camera_driver/: CMakeLists.txt  v4l2_camera_driver.unit.yaml
unit/v4l2_camera_driver/include/: v4l2_camera_driver.h
unit/v4l2_camera_driver/src/: v4l2_camera_driver.cpp
unit/v4l2_camera_driver/template/: v4l2_camera_driver.example.cpp  v4l2_camera_driver.example.h
unit/yuyv_to_rgb/: CMakeLists.txt  yuyv_to_rgb.unit.yaml
unit/yuyv_to_rgb/include/: yuyv_to_rgb.h
unit/yuyv_to_rgb/src/: yuyv_to_rgb.cpp
unit/yuyv_to_rgb/template/: yuyv_to_rgb.example.cpp  yuyv_to_rgb.example.h
